tests/NormalTests/paczka1/fuzzy1/81471717.err
Error in line 2: 8zSJPg A677 13,1
Error in line 13: ?S88)
Error in line 5: ADhi5dE9f A857 76,5
Error in line 21: SQRiM A677 45,9
Error in line 39: q89ZI S884 17,1
